# laplax

./: .gitignore  JAX_USAGE.md  README.md  pyproject.toml
examples/: __init__.py  filter_comparison.py  jax_example.py  laplace_showcase.py  robust_comparison.py  simple_example.py  tracking_example.py
src/laplace/: __init__.py  filter.py  kalman.py  math.py  math_jax.py  models.py  models_jax.py  optim.py  types.py
src/laplax/: __init__.py  filter.py  math.py  models.py  optim.py  types.py
tests/: __init__.py  test_filter.py  test_math.py  test_models.py
